--- a/Views/Dish/Create.cshtml
+++ b/Views/Dish/Create.cshtml
@@ -9,7 +9,7 @@
 <div class"ms-2 mx-2">
 <h1>Create</h1>
     <div asp-validation-summary="All" class="text-danger"></div>
-    <form asp-controller="Dish" asp-action="Create" method="post" class="mt-3">
+    <form asp-controller="Dish" asp-action="Create" method="post" class="mt-3" enctype="multipart/form-data">
         <div style="margin-top:7px" class="form-group row">
             <label asp-for="DishName" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
@@ -30,13 +30,25 @@
                 <input asp-for="Making" class="form-control" placeholder="How to making">
             </div>
             <span asp-validation-for="Making" class="text-danger"></span>
-        </div>   
+        </div>
         <div style="margin-top:7px" class="form-group row">
             <label asp-for="Request" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
                 <input asp-for="Request" class="form-control">
             </div>
             <span asp-validation-for="Request" class="text-danger"></span>
+        </div>
+        <div style="margin-top:7px" class="form-group row">
+                <label asp-for="Discount" class="col-sm-2 col-form-label"></label>
+                <div class="col-sm-10">
+                    <input asp-for="Discount" class="form-control">
+                </div>
+                <span asp-validation-for="Discount" class="text-danger"></span>
+         </div>
+        <div style="margin-top:7px" class="form-group row">
+                <div class="col-sm-10">
+                    <input type="file" name="file" id="file" accept="image/*" />
+                </div>
         </div>
         <div style="margin-top:10px" class="form-group row">
             <div class="col-sm-10">
