--- a/Views/Menu/Index.cshtml
+++ b/Views/Menu/Index.cshtml
@@ -2,7 +2,9 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@model IEnumerable<Menu>
+@using X.PagedList.Mvc.Core;
+@using X.PagedList.Web.Common;
+@model X.PagedList.IPagedList<Menu>
 <h1>Employee List</h1>
 <table class="table table-striped">
     <thead>
@@ -34,3 +36,10 @@
         }
     </tbody>
 </table>
+<div class="product__pagination">
+    @Html.PagedListPager(Model,page=>Url.Action("Index",new{page=page}),new PagedListRenderOptions()
+    {
+    LiElementClasses = new string[] { "page-item" },
+    PageClasses = new string[] { "page-link" }
+    })
+</div>
