--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -47,10 +47,7 @@
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <select asp-for="Input.Role" asp-items="@Model.Input.Rolelist" class="form-select" aria-required="true">
-                    <option disabled selected>Select Role</option>
-                </select>
-                <span asp-validation-for="Input.Role" class="text-danger"></span>
+                <input asp-for="Input.Role" type="hidden" value="Client"/>
             </div>
             
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
