--- a/Views/Client/Index.cshtml
+++ b/Views/Client/Index.cshtml
@@ -4,6 +4,15 @@
 @using X.PagedList.Mvc.Core;
 @using X.PagedList.Web.Common;
 @model X.PagedList.IPagedList<Dish>
+<form asp-action="Index" method="get">
+	<div class="form-actions no-color">
+		<p>
+			Find by name: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
+			<input type="submit" value="Search" class="btn btn-default" /> |
+			<a asp-action="Index">Back to Full List</a>
+		</p>
+	</div>
+</form>
 <div class="wrapper">
 	<div class="section section-gray">
 		<div class="container">
