--- a/Views/Employees/Index.cshtml
+++ b/Views/Employees/Index.cshtml
@@ -9,11 +9,23 @@
 @using X.PagedList.Web.Common;
 @model X.PagedList.IPagedList<Employee>
 <h1>Employee List</h1>
+<form asp-action="Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Find by name: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
+            <input type="submit" value="Search" class="btn btn-default" /> |
+            <a asp-action="Index">Back to Full List</a>
+        </p>
+    </div>
+</form>
+<a asp-action="Create" class="btn btn-primary">Create New Employee</a>
 <table class="table table-striped">
     <thead>
         <tr>
             <th>ID</th>
-            <th>Employee Name</th>
+            <th>
+                <a asp-action="Index" asp-route-sortOrder="name_desc">Name</a>
+            </th>
             <th>Address</th>
             <th>Gender</th>
             <th>Phone Number</th>
@@ -52,5 +64,3 @@
     PageClasses = new string[] { "page-link" }
     })
 </div>
-
-<a asp-action="Create" class="btn btn-primary">Create New Employee</a>
