--- a/Views/Cart/Checkout.cshtml
+++ b/Views/Cart/Checkout.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Checkout";
     float sum = 20000;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <!DOCTYPE html>
 <html lang="en">
