--- a/Views/Client/Index.cshtml
+++ b/Views/Client/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
 	ViewData["Title"] = "Index";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @using X.PagedList.Mvc.Core;
 @using X.PagedList.Web.Common;
